--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
-        <section id="login">
-            <div id="imagem">
-
+        <section class="login">
+            <div class="imagem">
+                
             </div>
-            <div id="formulario">
-
+            <div class="formulario">
+                <h1>LOGIN</h1>
+                <p>
+                    Seja bem-vindo(a) novamente. Faça login para acessar sua conta.
+                </p>
+                <form action="cadastro.php" method="get">
+                    <label for="iemail">
+                        <span class="material-symbols-outlined">
+                        person
+                        </span>
+                    </label>
+                    <input type="email" name="email" id="iemail">
+                </form>
+                <form action="cadastro.php" method="get">
+                    <label for="isenha">
+                        <span class="material-symbols-outlined">
+                            key
+                            </span>
+                    </label>
+                    <input type="password" name="sennha" id="isenha">
+                </form>
+                <div><input type="submit" value="Entrar"></div>
+                <div><a href="#">Esqueci a senha</a></div>
             </div>
         </section>
     </main>
