--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -20,23 +19,26 @@
                     Seja bem-vindo(a) novamente. Faça login para acessar sua conta.
                 </p>
                 <form action="cadastro.php" method="get">
-                    <label for="iemail">
-                        <span class="material-symbols-outlined">
-                        person
-                        </span>
-                    </label>
-                    <input type="email" name="email" id="iemail">
+                    <div class="email">
+                        <label for="iemail">
+                            <span class="material-symbols-outlined">person</span>
+                        </label>
+                        <input type="email" name="email" id="iemail" autocomplete="email" required>
+                    </div>
+                    <div class="senha">
+                        <label for="isenha">
+                            <span class="material-symbols-outlined">key</span>
+                        </label>
+                        <input type="password" name="senha" id="isenha" autocomplete="current-password" required minlength="8">
+                    </div>
+                <div><input class="entrar" type="submit" value="Entrar"></div>
+                <div class="esqueci-senha"><a href="#">Esqueci a senha 
+                    <span class="material-symbols-outlined">
+                        forward_to_inbox
+                    </span>
+                    </a></div>
                 </form>
-                <form action="cadastro.php" method="get">
-                    <label for="isenha">
-                        <span class="material-symbols-outlined">
-                            key
-                            </span>
-                    </label>
-                    <input type="password" name="sennha" id="isenha">
-                </form>
-                <div><input type="submit" value="Entrar"></div>
-                <div><a href="#">Esqueci a senha</a></div>
+                
             </div>
         </section>
     </main>
