--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="formulario">
                 <h1>LOGIN</h1>
                 <p>
-                    Seja bem-vindo(a) novamente. Faça login para acessar sua conta.
+                    Seja bem-vindo(a) novamente.
                 </p>
                 <form action="cadastro.php" method="get">
                     <div class="email">
