--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             </div>
             <div class="formulario">
                 <h1>LOGIN</h1>
-                <p>
-                    Seja bem-vindo(a) novamente.
-                </p>
+                <p>Seja bem-vindo(a) novamente.</p>
                 <form action="cadastro.php" method="get">
                     <div class="email">
                         <label for="iemail">
